--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "typeinfo": "cpp",
         "iterator": "cpp",
         "list": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "complex": "cpp"
     }
 }
