--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "list": "cpp",
         "set": "cpp",
         "complex": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "cstring": "cpp"
     }
 }
